Problem with ActiveX by embedding in Windows Forms
Hi,
in our application is VLC player embedded in Windows Forms via ActivX-Component.
Up to version 2.1.5 it works just fine. Since version 2.2.0, we get the error message by compiling the wrapper AxAXVLC: "AXVLC.IVLCControl2.VersionInfo_2.get: cannot explicitly call operator or accessor." After trying out the existing nightlies, we found that up to the 24.11.2014 the error does not occur. With each build after that (also in version 2.2.1), is the error because.
Could you please help us to solve this problem.
Many thanks in advance.
Regards Yuriy
Edited by Jean-Baptiste Kempf