activex: Rename versionInfo method

This make the build fail with MSVC, since it is case insensitive, and therefore conflicts with the versionInfo method
refs #14239 #14271